--- a/forallx-adl-frontmatter.tex
+++ b/forallx-adl-frontmatter.tex
@@ -2,8 +2,8 @@
 \begin{titlingpage}
 
 ~\\[4cm]
-\begin{center}\forallxadl \end{center}
-\newpage \thispagestyle{empty} ~\\
+\begin{center}\forallxadl \end{center}\end{titlingpage}
+
 \newpage \thispagestyle{empty}
 ~\\[2cm]
 \noindent \makebox[6cm]{\begin{minipage}{7cm}
@@ -22,15 +22,13 @@
 
 {P.D.\ Magnus}\\
 \emph{University at Albany, State University of New York}
-\end{titlingpage}
 
-\thispagestyle{empty}%
-
-{\copyright\ \ifthenelse{\year=2005}{\number\year}{2005–\number\year} by Antony Eagle, Tim Button and P.D.\ Magnus. Some rights reserved.
+\newpage \thispagestyle{empty} ~\\
+\copyright\ \ifthenelse{\year=2005}{\number\year}{2005–\number\year} by Antony Eagle, Tim Button and P.D.\ Magnus. Some rights reserved.
 
 This version of \forallxadl\ is current as of \today.
 
-\medskip
+\medskip\thispagestyle{empty}%
 
 This book is a derivative work created by Antony Eagle, based upon Tim Button's 2016 Cambridge version of P.D.\ Magnus's \forallx\ (version 1.29). There are pervasive substantive changes in content, theoretical approach, coverage, and appearance. 
 
