--- a/forallx-adl-what.tex
+++ b/forallx-adl-what.tex
@@ -63,7 +63,7 @@ Above we said that when someone offers an argument, they intend to offer premise
 
 
 \practiceproblems
-At the end of almost every sections, there are practice exercises that review and explore the material covered in the chapter. There is no substitute for actually working through some problems, because logic is more about cultivating a \emph{way of thinking} than it is about memorising facts.\\[12pt]
+At the end of every section, there are practice exercises that review and explore the material covered in the chapter. There is no substitute for actually working through some problems, because logic is more about cultivating a \emph{way of thinking} than it is about memorising facts.\\[12pt]
 
 \problempart What is the difference between argument in the everyday sense, and in the logicians’ sense? What is the point of logical arguments?
 
@@ -85,7 +85,7 @@ In §\ref{s:Arguments}, we gave a very permissive account of what an argument is
 	\end{earg}
 We have been given a premise and a conclusion. So we have an argument. Admittedly, it is a \emph{terrible} argument. But it is still an argument.
 
-\section{Two ways that arguments can go wrong}\label{s:twoways}
+\section{Two Ways that Arguments Can Go Wrong}\label{s:twoways}
 
 It is worth pausing to ask what makes the argument so weak. In fact, there are two sources of weakness. First: the argument's (only) premise is obviously false. Rundle Mall has some interesting buskers, but not quite \emph{that} interesting. Second: the conclusion does not follow from the premise of the argument. Even if there were a bassoon-playing dragon in Rundle Mall, we would not be able to draw any conclusion about Dali's predilection for poker.
 
@@ -99,7 +99,7 @@ The general point is as follows. For any argument, there are two ways that it mi
 To determine whether or not the premises of an argument are true is often a very important matter. But that is normally a task best left to experts in the field: as it might be, historians, scientists, or whomever. In our role as \emph{logicians}, we are more concerned with arguments \emph{in general}. So we are (usually) more concerned with the second way in which arguments can go wrong.
 
 
-\section{Conclusive arguments} \label{s:conclusiveargs}
+\section{Conclusive Arguments} \label{s:conclusiveargs}
 As logicians, we want to be able to determine when the conclusion of an argument follows from the premises. One way to put this is as follows. We want to know whether, if all the premises were true, the conclusion would also have to be true. This motivates a definition:
 \factoidbox{
 	An argument is \define{conclusive} if, and only if, the truth of the premises guarantees the truth of the conclusion.
@@ -149,7 +149,7 @@ Conclusiveness of an argument is insensitive to the truth or falsity of the prem
 	\item[So:]The earth has an even number of moons.
 \end{earg} The argument is conclusive, as there is no possible way in which the earth could have twenty-eight moons while having an odd number of moons. But the premise is so obviously false that this argument could never be used to persuade anyone. The premise supports the conclusion, but that support is moot given the evident falsity of the premise.
 
-\section{Reasons to believe}\label{ss:reasoning}
+\section{Reasons to Believe}\label{ss:reasoning}
 
 A conclusive argument, in the logician's sense, links the premises to the conclusion. It turns the reasons you have for accepting to the premises into reasons to accept its conclusion. But a conclusive argument need not provide you with a reason to believe the conclusion. One way this can happen is when you don't accept any of the premises in the first place. When the premises support the conclusion, that might just mean that they \emph{would} be excellent reasons to accept the conclusion – \emph{if only they were true}!
 
@@ -182,7 +182,7 @@ Sometimes people think that logic will provide a powerful tool to persuade and c
 The question, \emph{what ought I to believe?} is one of the deepest in the area of philosophy known as \define{epistemology}, the theory of knowledge. Logic is not able to answer that question all by itself. Even if logic tells you that there is a conclusive argument from premise \meta{A} to conclusion \meta{B}, logic can't tell you whether you ought to believe both, or reject both. However, logic will tell you something important, even if it is only a limited part of the answer to the question of rational belief. It will tell you that, when you know an argument to be conclusive, \emph{you cannot both accept its premises while rejecting its conclusion}. Thus conceived, logic is not even a science of reasoning, because it does not tell you what to think. Logic can't tell you, or anyone else, which packages of premises-and-conclusions to accept.
 
 
- \section{Conclusiveness for special reasons}
+ \section{Conclusiveness for Special Reasons}
  An argument can be conclusive for reasons unrelated to its structure. Take this example:
  	\begin{earg}
  		\item[] Juanita is a vixen.
@@ -295,7 +295,7 @@ Many good arguments are inconclusive and invalid. Consider this one:
 \end{earg}
 This argument generalises from observations about several cases to a conclusion about all cases. Though it is invalid, that doesn't mean it is a bad argument. The premises appear to provide some support for the conclusion, though it falls short of being conclusive. 
 
-\define{Induction} describes a form of reasoning from evidence to hypotheses about that evidence. For example, when we reason from a sample of eligible voters to a hypothesis about how the whole population will vote, we are reasoning inductively. \define{Inductive logic} is the attempt to generalise deductive logic to evaluate arguments in line with the canons of good inductive reasoning. The proponents of inductive logic think there might be a generalisation of deductive logic which enables us to evaluate arguments in a more fine-grained way than the options we've canvassed so far (i.e., just 'valid', and 'invalid and conclusive' and 'invalid and inconclusive'). A significant part of the project of inductive logic is the attempt to classify inconclusive arguments in terms of whether their premises provide good inductive evidence in favour of their conclusions. 
+\define{Induction} describes a form of reasoning from evidence to hypotheses about that evidence. For example, when we reason from a sample of eligible voters to a hypothesis about how the whole population will vote, we are reasoning inductively. \define{Inductive logic} is the attempt to generalise deductive logic to evaluate arguments in line with the canons of good inductive reasoning. The proponents of inductive logic think there might be a generalisation of deductive logic which enables us to evaluate arguments in a more fine-grained way than the options we've canvassed so far (i.e., just `valid', and `invalid and conclusive' and `invalid and inconclusive'). A significant part of the project of inductive logic is the attempt to classify inconclusive arguments in terms of whether their premises provide good inductive evidence in favour of their conclusions. 
 
 In the example, the premises are of the form `In January $n$, it rains', and the conclusion is of the form `Every January, it rains'. This argument thus has a general conclusion drawn from instances of that generalisation. (That is, `it rains in January 1997' is an instance of the generalisation `it rains in January of every year'.) If we regard the foregoing premises as providing decent support for the conclusion, we might think that adding additional premises of the same sort before drawing the conclusion would make it even stronger: In January 2001, it rained in London; In January 2002\ldots. This principle, that a generalisation is increasingly supported the more instances we adduce, more might be part of our toolkit when evaluating arguments inductively. But, no matter how many premises of this form we add, the argument will remain inconclusive. Even if it has rained in London in every January thus far, it remains \emph{possible} that London will stay dry next January. (Even if we include every instance – past, present, and future – the argument will be inconclusive, because one will need the additional premise \emph{that there are no other instances than those we've included}.)
 
@@ -303,7 +303,7 @@ The point of all this is that most arguments which are inductively very strong a
 
 
 
-\section{Making conclusive arguments valid} % new section 2018
+\section{Making Conclusive Arguments Valid} % new section 2018
 
 Some arguments which are conclusive but invalid can be turned into valid arguments. So consider again the argument `The sculpture is green all over; therefore it is not red all over'. We can make a valid argument from this by adding a premise: 
 	\begin{earg}
@@ -422,7 +422,7 @@ In each case: if so, give an example; if not, explain why not.
 
 In §\ref{s:Valid}, we introduced the idea of a valid argument. We will want to introduce some more ideas that are important in logic.
 
-\section{Truth values}\label{s:truthvalues}
+\section{Truth Values}\label{s:truthvalues}
 As we said in §\ref{s:Arguments}, arguments consist of premises and a conclusion, where the premises are supposed to support the conclusion. But if premises are supposed to state reasons, and conclusions are supposed to state claims, then both of them have to be the sort of sentence which can be used to \emph{say how things are}, truly or falsely. 
 
 So many kinds of English sentence cannot be used to express premises or conclusions of arguments. For example:
@@ -490,7 +490,7 @@ For example, since `The sculpture is green all over, so the sculpture is not red
 \end{earg}
 These sentences have have no interesting internal structure for our purposes, so it is easy to make them formally consistent. But, holding fixed their actual meaning (particularly the actual meaning of `red' and `green'), we see that the truth of \ref{fc1} excludes the truth of \ref{fc2}. (Again, more on the notion of structure invoked here in §\ref{s:ValidityInVirtueOfForm}.)
 
-\section{Necessity and contingency}\label{s:neccandcont}
+\section{Necessity and Contingency}\label{s:neccandcont}
 In assessing whether an argument is conclusive, we care about what would be true \emph{if} the premises were true. But some sentences just \emph{must} be true. Consider these sentences:
 	\begin{earg}
 		\item[\ex{Acontingent}] It is raining.
@@ -540,12 +540,12 @@ If some sentences contain amongst themselves a necessary falsehood, those senten
 \problempart Which of the following are declarative sentences?
 \begin{earg}
 	\item Answer me!
-	\item 'Answer me!', she demanded.
+	\item `Answer me!', she demanded.
 	\item You are required to answer me.
 	\item Saying nothing is not an answer.
 	\item If you want answers, ask Alfred.
 	\item Why won't you answer me?
-	\item All that is left to ask is: 'Who has the answers?'
+	\item All that is left to ask is: `Who has the answers?'
 \end{earg}
 
 \problempart
@@ -593,4 +593,4 @@ Could there be:
 \end{earg}
 In each case: if so, give an example; if not, explain why not.
 
-\problempart A feature of a set $A$ is \define{monotonic} if any set including $A$ also has the feature. Explain why inconsistency is monotonic.
+\problempart Some feature of a set $A$ is \define{monotonic} if any set including all the members of $A$ also has the feature. (So \emph{having at least 3 members} is monotonic, since adding more members clearly preserves that feature.) Explain why inconsistency of a set of sentences is monotonic.
