--- a/forallx-adl-prooftfl.tex
+++ b/forallx-adl-prooftfl.tex
@@ -8,7 +8,7 @@
 
 \chapter{Proof and Reasoning}\label{s:NDVeryIdea}
 
-\section{Arguments and reasoning revisited} % (fold)
+\section{Arguments and Reasoning Revisited} % (fold)
 \label{sec:arguments_and_reasoning_revisited}
 
 % section arguments_and_reasoning_revisited (end)
@@ -37,7 +37,7 @@ Natural deduction systems promise to give us a better insight – or at least, a
 		P \eif Q, P & \ttherefore Q.
 	\end{align*} From a truth-table perspective, these arguments are indistinguishable: their premises are true in the same valuations, and so are their conclusions. Yet they are distinct from an implicational point of view, since one will involve consideration of the consequences of disjunctions and negations, and the other consideration of the consequences of the conditional. So the natural deduction perspective on arguments promises to give us a more fine-grained analysis of how valid arguments function. 
 
-\section{Efficiency in natural deduction} % (fold)
+\section{Efficiency in Natural Deduction} % (fold)
 \label{sec:efficiency_in_natural_deduction}
 
 % section efficiency_in_natural_deduction (end)
@@ -53,7 +53,7 @@ This argument is also valid – as you can probably tell – but to test it requ
 
 When we get to \FOL, though, the problem gets dramatically worse. There is nothing like the truth table test for \FOL. To assess whether or not an argument is valid, we have to reason about \emph{all} interpretations. But there are infinitely many possible interpretations. We cannot even in principle set a machine to grind through infinitely many possible interpretations and report back when it is finished: it will \emph{never} finish. We either need to come up with some more efficient way of reasoning about all interpretations, or we need to look for something different. Since we already have some motivation for considering the role in arguments of particular premises, rather than all the premises collectively as in the truth-table approach, we will opt for the `something different' path – natural deduction.
 
-\section{Our system of natural deduction and its history} % (fold)
+\section{Our System of Natural Deduction and its History} % (fold)
 \label{sec:our_system_of_natural_deduction_and_its_history}
 
 % section our_system_of_natural_deduction_and_its_history (end)
@@ -182,7 +182,7 @@ Which of the following could, given the right rules, be turned into a proof corr
 \chapter{Basic Rules for \textnormal{\TFL}: Rules without Subproofs}\label{s:BasicTFLns}
 
 
-\section{Conjunction introduction}\label{conjint}
+\section{Conjunction Introduction}\label{conjint}
 Suppose I want to show that Ludwig is reactionary \emph{and} libertarian. One obvious way to do this would be as follows: first I show that Ludwig is reactionary; then I show that Ludwig is libertarian; then I put these two demonstrations together, to obtain the conjunction.
 
 Our natural deduction system will capture this thought straightforwardly. In the example given, I might adopt the following symbolisation key to represent the argument in \TFL:
@@ -229,7 +229,7 @@ Note that the rule involves extending the vertical line to cover the newly intro
 	\have{b}{(P\eand Q)} \ai{a, q}
 \end{proof}
 
-\section{Conjunction elimination}\label{conjelim}
+\section{Conjunction Elimination}\label{conjelim}
 
 The above rule is called `conjunction \emph{introduction}' because it introduces a sentence with `$\eand$' as its main connective into our proof, prior to which it may have been absent. Correspondingly, we also have a rule that \emph{eliminates} a conjunction. Not that the earlier conjunction is somehow removed! It's just that we use a sentence whose main connective is a conjunction to justify further sentences in which that conjunction does not feature.
 
@@ -318,7 +318,7 @@ Our conjunction rules correspond to intuitively correct patterns of implication.
 It can be recognised, then, that our proof rules correspond to valid arguments in \TFL, and so our conjunction rules will never permit us to derive a false sentence from true sentences. There is no guarantee of course that the assumptions we make in our formal proofs are in fact true – only that if they were true, what we derive from them would also be true. So despite the fact that our proof rules are a \emph{syntactic} procedure, that rely only on recognising the main connective of a sentence and applying an appropriate rule to introduce or eliminate it, each of our rules corresponds to an acceptable entailment.
 
 
-\section{Conditional elimination}\label{condelim}
+\section{Conditional Elimination}\label{condelim}
 Consider the following argument:
 	\begin{quote}
 		If Jane is smart then she is fast. Jane is smart. So Jane is fast.
@@ -351,7 +351,7 @@ The correctness of our proof rule of conditional elimination is supported by the
 	\item  $\meta{A}, \meta{A}\eif\meta{B}\entails \meta{B}$.
 \end{itemize} So applying this rule can never produce false conclusions if we began with true assumptions.
 
-\section{Biconditional elimination}\label{bielim}
+\section{Biconditional Elimination}\label{bielim}
 
 The \define{biconditional elimination} rule ({\eiff}E) lets you do a much the same as the conditional rule. Unofficially, a biconditional is like two conditionals running in each direction. So, thought of informally, our biconditional rules correspond to the left-to-right conditional elimination rule, the other of which corresponds to a right-to-left application of conditional elimination. 
 
@@ -406,7 +406,7 @@ The correctness of our proof rules of biconditional elimination is supported by 
 \end{itemize}
 
 
-\section{Disjunction introduction}\label{disjint}
+\section{Disjunction Introduction}\label{disjint}
 
 Suppose Ludwig is reactionary. Then Ludwig is either reactionary or libertarian. After all, to say that Ludwig is either reactionary or libertarian is to say something weaker than to say that Ludwig is reactionary. (\meta{A} is weaker than \meta{B} if \meta{A} follows from \meta{B}, but not \emph{vice versa}.) 
 
@@ -497,7 +497,7 @@ Give natural deduction proofs for the following arguments: \begin{earg}
 We've already seen in §\ref{c:ass} how to start a proof by making assumptions. But the true power of natural deduction relies on its rules governing when you can make additional assumptions during the course of the proof, and how you can \emph{discharge} those assumptions when you no longer need them. 
 
 
-\section{Additional assumptions and subproofs}\label{s.subproof}
+\section{Additional Assumptions and Subproofs}\label{s.subproof}
 
 In natural deduction, both making and discharging additional assumptions are handled using \define{subproofs}. These are subsidiary proofs within the main proof, which encapsulate that part of a larger proof that depends on an assumption that is not among the premises. (Conversely, we can think of the premises of an argument as those assumptions left undischarged at the conclusion of a proof.)
 
@@ -522,7 +522,7 @@ Even without any new rules, the idea of opening subproofs by making new assumpti
 	\have{q2}{Q}\by{R}{q}
 \end{proof} In this proof, even though the occurrence of `$Q$' on line 4 occurs within the range of the assumption `$R$', it does not intuitively depend on it. We used reiteration to show that `$R$' is still derivable from active assumptions at line 4, but it does not follow that `$R$' depends in any robust way on every assumption that is active at line 4. 
 
-\section{Conditional introduction}\label{condint}
+\section{Conditional Introduction}\label{condint}
 
 To illustrate the use of subproofs, we will begin with the rule of conditional introduction. It is fairly easy to motivate informally.\phantomsection\label{ci.motivate} The following argument in English should be valid:
 	\begin{quote}
@@ -661,7 +661,7 @@ Second, we show exportation holds. Here, we need to open two nested subproofs:
 \end{proof}
 
 
-\section{Some pitfalls of additional assumptions}\label{pitfalls}
+\section{Some Pitfalls of Additional Assumptions}\label{pitfalls}
 
 
 Making additional assumptions in the range of an assumption needs to be handled with some care, as I said in §\ref{s.subproof}. Now that we have a rule that discharges assumptions in our repertoire, we can describe some of the potential pitfalls.
@@ -691,7 +691,7 @@ But suppose we now tried to continue the proof as follows:
 \end{proof}
 If we were allowed to do this, it would be a disaster. It would allow us to prove any atomic sentence letter from any other atomic sentence letter. But if you tell me that Anne is fast (symbolised by `$A$'), I shouldn't be able to conclude that Queen Boudica stood twenty-feet tall (symbolised by `$B$')! So we must be prohibited from doing this. The rule on page \pageref{subproof.rule} stipulation rules out the disastrous attempted proof above. The rule of $\eif$E requires that we cite two individual lines from earlier in the proof. In the purported proof, above, one of these lines (namely, line 4) occurs within a subproof that has (by line 6) been closed. This is illegitimate. 
 
-\section{Subproofs within subproofs}
+\section{Subproofs within Subproofs}
 
 Once we have started thinking about what we can show by making additional assumptions, nothing stops us from posing the question of what we could show if we were to make \emph{even more} assumptions? This might motivate us to introduce a subproof within a subproof. Here is an example which only uses the rules of proof that we have considered so far:
 \begin{proof}
@@ -758,7 +758,7 @@ Recall the proof of the argument $$P \eif Q, Q \eif R \ttherefore P \eif R$$ fro
 \end{proof} 
 While it is permissible, and often convenient, to have several assumptions with the same range and without nesting, I recommend always trying to construct your proofs so that each assumption begins its own subproof. That way, if you later wish to apply rules which discharge a single assumption, you may always do so.
 
-\section{Proofs within proofs}
+\section{Proofs within Proofs}
 
 One interesting feature of a natural deduction system like ours is that because we can make any assumption at any point, and thereafter continue in accordance with the rules, any correctly formed proof can be \emph{re-used} as a subproof in a later proof. For example, suppose we wanted to give a proof of this argument:  $$\bigl((P \eif Q)\eand(P \eif R)\bigr) \ttherefore (P \eif (R \eand Q)).$$ We begin by opening our proof by assuming the premise. We also note that the conclusion is a conditional, and so we'll assume that it is obtained by an instance of conditional introduction. That will give us this `skeleton' of a proof before we begin filling in the details:
  \begin{proof}
@@ -789,7 +789,7 @@ The converse isn't always true, because sometimes in a subproof you use an assum
 
 
 
-\section{Biconditional introduction} \label{biint} 
+\section{Biconditional Introduction} \label{biint} 
 The biconditional is like a two-way conditional. The introduction rule for the biconditional resembles two instances of conditional introduction, one for each direction.
 
 In order to prove `$W \eiff X$', for instance, you must be able to prove `$X$' on the assumption `$W$' \emph{and} prove `$W$' on the assumption `$X$'. The \define{biconditional introduction} rule ({\eiff}I) therefore requires two subproofs to license the introduction. Schematically, the rule works like this:
@@ -876,7 +876,7 @@ The acceptability of our proof rules is grounded in the fact that they will neve
 
 
 
-\section{Disjunction elimination}\label{disjelim}
+\section{Disjunction Elimination}\label{disjelim}
 
 
 The disjunction elimination rule is slightly trickier than those we've seen so far. Suppose that either Ludwig is reactionary or he is libertarian. What can you conclude? Not that Ludwig is reactionary; it might be that he is libertarian instead. And equally, not that Ludwig is libertarian; for he might merely be reactionary. It can be hard to draw a definite conclusion from a disjunction just by itself.
@@ -970,7 +970,7 @@ This disjunction rule is supported by the following valid \TFL\ argument form: \
 \end{itemize}
 
 
-\section{Negation introduction}\label{negint}
+\section{Negation Introduction}\label{negint}
 
 Our negation rules are inspired by the form of reasoning known as \emph{reductio} (recall page \pageref{reductio}). In \emph{reductio} reasoning, we make an assumption that \meta{A} for the sake of argument, and show that something contradictory follows from it. Then we can conclude that our assumption was false, and that its negation must be true. There are lots of approaches to negation in natural deduction, but all of them stem from this same basic insight: when an assumption that \meta{A} goes awry, conclude $\enot \meta{A}$.
 
@@ -1018,7 +1018,7 @@ Another example, for practice. Let's prove this argument: $$(C \eif \enot A) \th
 The correctness of the negation introduction rule is demonstrated by this valid \TFL\ argument form: \begin{itemize}
 	\item If $\meta{C}_{1},…,\meta{C}_{n},\meta{A} \vDash \meta{B}$ and $\meta{C}_{1},…,\meta{C}_{n},\meta{A} \vDash \enot\meta{B}$, then $\meta{C}_{1},…,\meta{C}_{n} \vDash \enot\meta{A}$. \end{itemize}
 
-\section{Negation elimination}\label{negelim}
+\section{Negation Elimination}\label{negelim}
 
 The rule of negation introduction is interesting, because it is \emph{almost} its own elimination rule too! Consider this schematic proof: \begin{proof}
 	\open 
@@ -1291,7 +1291,7 @@ Give a proof for each of the following arguments:
 \chapter{Some Philosophical Issues about Conditionals and Meaning}\label{s:philosophy}
 
 
-\section{Conditional introduction and the English conditional} \label{cond.proof}%Æ added
+\section{Conditional Introduction and the English Conditional} \label{cond.proof}%Æ added
 
 We motivated the conditional introduction rule back on page \pageref{ci.motivate} by giving a English argument, using the English word `if'. Now, {\eif}I is a stipulated rule for our conditional connective \eif; it doesn't really need motivation since we could simply postulate that such a rule is part of our formal proof system. It is justified, if justification is needed, by the Deduction Theorem (a result noted in §\ref{ded.thm}). (Likewise, $\eif$E may be justified by a schematic truth table demonstration that $\meta{A}, \meta{A}\eif\meta{C} \vDash \meta{C}$.)
 
@@ -1525,7 +1525,7 @@ To be clear: this is not a proof. Rather, it is a proof  \emph{scheme}. After al
 
 You might note that in lines 5–7 in the complicated proof in Figure~\ref{fig:vi}, we in effect made use of this proof scheme, introducing a conjunction from prior lines only to immediately eliminate again, just to ensure that the relevant sentences appeared directly in the range of the assumption `$Q$'.
 
-\section{Disjunctive syllogism}
+\section{Disjunctive Syllogism}
 Here is a very natural argument form.
 	\begin{quote}
 		Mitt is either in Massachusetts or in DC. He is not in DC. So, he is in Massachusetts.
@@ -1594,7 +1594,7 @@ This rule is, again, a conservative addition to our stock of proof rules. Any ap
 \end{proof}
 Again, we made a dispensible use of reiteration.
 
-\section{Double negation elimination}
+\section{Double Negation Elimination}
 
 In \TFL, the double negation $\enot\enot\meta{A}$ is equivalent to \meta{A}. In natural languages, too, double negations tend to cancel out – Malcolm is not unaware that his leadership is under threat iff he is aware that it is. That said, you should be aware that context and emphasis can prevent them from doing so. Consider: `Jane is not \emph{not} happy'. Arguably, one cannot derive `Jane is happy', since the first sentence should be understood as meaning the same as  `Jane is not \emph{un}happy'. This is compatible with `Jane is in a state of profound indifference'. As usual, moving to \TFL\ forces us to sacrifice certain nuances of English expressions – we have, in \TFL, just one resource for translating negative expressions like `not' and the suffix `un-', even if they are not synonyms in English.
 
@@ -1677,7 +1677,7 @@ Again a dispensible use of reiteration occurs in this proof just to make it more
 
 
 
-\section{De Morgan rules}
+\section{De Morgan Rules}
 Our final additional rules are called De Morgan's Laws. (These are named after the nineteenth century logician August De Morgan.) The first two De Morgan rules show the provable equivalence of a negated conjunction and a disjunction of negations.
 \factoidbox{\begin{minipage}{0.35\textwidth}
 	\begin{proof}
@@ -1832,7 +1832,7 @@ We've now developed a system of proof rules, all of which we have supported by s
 
 This choice of proof system is not forced on us. There are \emph{alternative} proof systems which are nevertheless equivalent to the system we have introduced, in that everything which is provable in our system is provable in the alternative system, and \emph{vice versa}. Indeed, there are lots of alternative systems. In this section, I will discuss just a couple. The alternative systems I will discuss here result from taking one of our derived rules as basic, and showing that doing so allows us to derive a formerly basic rule.
 
-\section{Replacing negation elimination by double negation elimination} 
+\section{Replacing Negation Elimination by Double Negation Elimination} 
 
 The first alternative system results from replacing the rule of negation elimination {\enot}E by double negation elimination {\enot\enot}E. In combination with the other rules, we can emulate the results of {\enot}E by an application of $\enot$I, followed by a single use of $\enot\enot$E:
  \begin{proof}
@@ -1851,7 +1851,7 @@ This proof shows that, in a system with {\enot}I and {\enot\enot}E, we do not ne
 Since we've shown {\enot\enot}E to be a derived rule in our original system, this alternative system proves exactly the same things as our original system. The proofs will look different, but there is a correct proof of \meta{C} from $\meta{A}_{1},…,\meta{A}_{n}$ in one system, there will be a corresponding proof in the other system. Any proof in the one system can be converted into a proof in the other by replacement of the appropriate instances of the rules. 
 
 
-\section{Replacing disjunction elimination with disjunctive syllogism} % (fold)
+\section{Replacing Disjunction Elimination with Disjunctive Syllogism} % (fold)
 \label{sec:replacing_disjunction_elimination_with_disjunctive_syllogism}
 
 Another alternative system results from replacing disjunction elimination {\eor}E (proof by cases) by disjunctive syllogism DS. We already know that DS is a derived rule: any proof which uses disjunctive syllogism can be converted into a proof that uses just the basic rules. So to show the alternative system proves the same things as our original system, we just need to show that we can emulate the effects of {\eor}E by using DS.
